# layoutlm_lightning

./: .gitignore  README.md  pyproject.toml
layoutlm_lightning/: dataset.py  module.py
layoutlm_lightning/models/: layoutlm.py
scripts/: train.py
